# Test-mailbox

./: Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
box/: asgi.py  settings.py  urls.py  wsgi.py
mails/: admin.py  consumers.py  models.py  routing.py  urls.py  views.py
mails/data_access/: gateways.py
mails/services/: messages.py
mails/templates/mails/: index.html
